--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,9 @@
     <title>Heroku Developer 2</title>
   </head>
   <body>
-    <h1>Select a query:</h1>
-    <a href="query1">Mentors and students</a></br>
-    <a href="query2">Mentors</a></br>
-    <a href="query3">Students</a></br>
+    <h1>Level 4 Capstone Backend</h1>
+    <p>Use Postman to send CRUD requests to this server</p>
     <h1>API:</h1>
-    <a href="api">Backend API</a><br/>
+    <a href="api">Backend API</a><br />
   </body>
 </html>
