--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Level 4 Capstone Backend</title>
+    <title>index.html</title>
   </head>
-  <body>
-    <h1>Level 4 Capstone Backend</h1>
-    <p>Use Postman to send CRUD requests to this server</p>
-    <h1>API:</h1>
-    <a href="api">Backend API</a><br />
-  </body>
+  <body></body>
 </html>
