--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>index.html</title>
   </head>
   <body>
-    Welcome home!
+    <h1>Netlify functions</h1>
+    <h3>Backend server</h3>
   </body>
 </html>
